name:                xmonad-screenshot
version:             0.1.2
synopsis:            Workspaces screenshooting utility for XMonad.
description:
  See README.markdown
homepage:            https://github.com/supki/xmonad-screenshot
license:             MIT
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          Dmitry Malikov, malikov.d.y@gmail.com
category:            XMonad
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  CHANGELOG.markdown
  README.markdown

source-repository head
  type:     git
  location: https://github.com/supki/xmonad-screenshot

source-repository this
  type:     git
  location: https://github.com/supki/xmonad-screenshot
  tag:      0.1.2

library
  default-language:
    Haskell2010
  build-depends:
      base   >= 3      && < 5
    , xmonad >= 0.9
    , gtk    >= 0.12.3
  hs-source-dirs:
    src
  exposed-modules:
    XMonad.Util.WorkspaceScreenshot
  other-modules:
    XMonad.Util.WorkspaceScreenshot.Internal
  ghc-options:
    -Wall
